# CareerPilot

./: .dockerignore  .env.example  .gcloudignore  .gitignore  Dockerfile  LICENSE  README.md  agent.py  app.py  constraints.py  deploy.sh  evaluators.py  mcp_client.py  observability.py  orchestrator.py  profile.json  prompts.py  pyproject.toml  requirements.txt
.gemini/: settings.json
pages/: 1_CV_Upload.py  2_Candidate_Profile.py  3_Job_Ranking.py  3_Sourcing.py  4_Feedback.py  4_Ranking.py  5_Feedback.py
scripts/: check_mcp.py  dump_schemas.py  smoke_agent.py
